2344.	[bug]		Improve "logging{ file ...; };" documentation.
			[RT #17888]

2343.	[bug]		(Seemingly) duplicate IPv6 entries could be
			created in ADB. [RT #17837]

2341.	[bug]		libbind: add missing -I../include for off source
			tree builds. [RT #17606]

2340.	[port]		openbsd: interface configuration. [RT #17700]

2339.	[port]		tru64: support for libbind. [RT #17589]

2338.	[bug]		check_ds() could be called with a non DS rdataset.
			[RT #17598]

2337.	[bug]		BUILD_LDFLAGS was not being correctly set.  [RT #17614]

2335.	[port]		sunos:  libbind and *printf() support for long long. 
			[RT #17513]

2334.	[bug]		Bad REQUIRES in fromstruct_in_naptr(),  off by one
			bug in fromstruct_txt(). [RT #17609]
			
2333.	[bug]		Fix off by one error in isc_time_nowplusinterval().
			[RT #17608]

2332.	[contrib]	query-loc-0.4.0. [RT #17602]

2331.	[bug]		Failure to regenerate any signatures was not being
			reported or past back to the UPDATE client. [RT #17570]

2330.	[bug]		Remove potential race condition when handling
			over memory events. [RT #17572]

			WARNING: API CHANGE: over memory callback
			function now needs to call isc_mem_waterack().
			See <isc/mem.h> for details.

2329.	[bug]		Clearer help text for dig's '-x' and '-i' options.

2328.	[maint]		Add AAAA addresses for A.ROOT-SERVERS.NET,
			F.ROOT-SERVERS.NET, H.ROOT-SERVERS.NET,
			J.ROOT-SERVERS.NET, K.ROOT-SERVERS.NET and
			M.ROOT-SERVERS.NET.

2327.	[bug]		It was possible to dereference a NULL pointer in
			rbtdb.c.  Implement deadnode processing in zones as
			we do for caches. [RT #17312]

2326.	[bug]		It was possible to trigger a INSIST in the acache
			processing.

2325.	[port]		Linux: use capset() function if available. [RT #17557]

	--- 9.5.0b2 released ---

2324.	[bug]		Fix IPv6 matching against "any;". [RT #17533]

2323.	[port]		tru64: namespace clash. [RT #17547]

2322.	[port]		MacOS: work around the limitation of setrlimit()
			for RLIMIT_NOFILE. [RT #17526]
